@@ -23,12 +23,12 @@
 
 #include <config.h>
 #include <zbar.h>
-#include "decoder.h"
 
 #ifdef DEBUG_EAN
 # define DEBUG_LEVEL (DEBUG_EAN)
 #endif
 #include "debug.h"
+#include "decoder.h"
 
 /* partial decode symbol location */
 typedef enum symbol_partial_e {
@@ -634,7 +634,7 @@ zbar_symbol_type_t _zbar_decode_ean (zbar_decoder_t *dcode)
                     dcode->ean.pass[0].state = dcode->ean.pass[1].state = -1;
                     dcode->ean.pass[2].state = dcode->ean.pass[3].state = -1;
                     if(sym > ZBAR_PARTIAL) {
-                        if(!get_lock(dcode, ZBAR_EAN13))
+                        if(!acquire_lock(dcode, sym))
                             postprocess(dcode, sym);
                         else {
                             dprintf(1, " [locked %d]", dcode->lock);
